r183:
 Fixed #32: Verbosity of trash-put