@@ -33,6 +33,7 @@ import sys
 from trashcli.trash import TrashDirectory
 from trashcli.trash import TrashedFile
 from trashcli.trash import TrashInfo
+from trashcli.trash import TrashInfoFile
 from trashcli.trash import VolumeTrashDirectory
 from trashcli.trash import TimeUtils
 from trashcli.trash import HomeTrashDirectory
@@ -111,24 +112,24 @@ class TestTrashDirectory(TestCase) :
         
 class TestTrashDirectory_persit_trash_info(TestCase) :
     def setUp(self):
-        trashdirectory_base_dir = Path(os.path.realpath("./sandbox/testTrashDirectory"))
-        trashdirectory_base_dir.remove()
+        self.trashdirectory_base_dir = Path(os.path.realpath("./sandbox/testTrashDirectory"))
+        self.trashdirectory_base_dir.remove()
         
-        self.instance=TrashDirectory(trashdirectory_base_dir, Volume(Path("/")))
+        self.instance=TrashDirectory(self.trashdirectory_base_dir, Volume(Path("/")))
         
     def test_persist_trash_info_first_time(self):
         trash_info=TrashInfo(Path("dummy-path"), datetime(2007,01,01))
 
         result=self.instance.persist_trash_info(trash_info)
 
-        self.assertTrue(isinstance(result, str))
-        self.assertEquals('dummy-path', result)
-        trash_info_file=self.instance._calc_path_for_info_file(result)
-        self.assertTrue(trash_info_file.exists())
+        self.assertTrue(isinstance(result, TrashInfoFile))
+        self.assertEquals('dummy-path', result.id)
+        self.assertEquals(self.trashdirectory_base_dir.join('info').join('dummy-path.trashinfo').path, result.path)
+
         self.assertEquals("""[Trash Info]
 Path=dummy-path
 DeletionDate=2007-01-01T00:00:00
-""", trash_info_file.read())
+""", result.read())
         
     def test_persist_trash_info_first_100_times(self):
         self.test_persist_trash_info_first_time()
@@ -139,13 +140,11 @@ DeletionDate=2007-01-01T00:00:00
             result=self.instance.persist_trash_info(trash_info)
     
             self.assertTrue(isinstance(result, str))
-            self.assertEquals('dummy-path'+"_" + str(i), result)
-            trash_info_file=self.instance._calc_path_for_info_file(result)
-            self.assertTrue(trash_info_file.exists())
+            self.assertEquals('dummy-path'+"_" + str(i), result.id)
             self.assertEquals("""[Trash Info]
 Path=dummy-path
 DeletionDate=2007-01-01T00:00:00
-""", trash_info_file.read())
+""", result.read())
 
     def test_persist_trash_info_other_times(self):
         self.test_persist_trash_info_first_100_times()
@@ -156,13 +155,11 @@ DeletionDate=2007-01-01T00:00:00
             result=self.instance.persist_trash_info(trash_info)
     
             self.assertTrue(isinstance(result, str))
-            self.assertTrue(result.startswith("dummy-path_"))
-            trash_info_file=self.instance._calc_path_for_info_file(result)
-            self.assertTrue(trash_info_file.exists())
+            self.assertTrue(result.id.startswith("dummy-path_"))
             self.assertEquals("""[Trash Info]
 Path=dummy-path
 DeletionDate=2007-01-01T00:00:00
-""", trash_info_file.read())
+""", result.read())
 
 
        
