@@ -1,2 +1,6 @@
+
+ Fixed #34: trash_info_file is not defined
+ Fixed #35: trash-list prints `No handlers could be found for logger "root"'
+
 r183:
  Fixed #32: Verbosity of trash-put
